--- a/view/style/home.css
+++ b/view/style/home.css
@@ -1,35 +1,79 @@
+*{
+    font-family: "DM Sans", serif;
+}
+
 body{
     overflow-x: hidden;
 }
 
+
+
 .mainContainer{
-    background-image: url(../img/bkgDataCenter.svg);
     background-size: cover;
     height: 100vh;
 }
 
+.purpleLine{
+    display: flex;
+    justify-content: center;
+    background-color:#56408C;
+    border: none;
+    width: 100px;
+    height: 4px;
+    border-radius: 100px;
+}
+
 .containerHome{
+    background-image: url(../img/bkgDataCenter.svg);
+    background-repeat: no-repeat;
+    background-size: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     flex-direction: column;
     flex-wrap: wrap;
+    
 }
+
+.containerHome::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+}
+
+.containerHome .purpleLine{
+    background-color:#957DCF;
+}
+
 
 h1{
     color: white;
-    font-size: 100px;
+    font-size: 90px;
     text-align: center;
-    border-bottom: 4px solid #56408C;
-    margin-bottom: 5%;
+
 }
 
 .mainText{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     color: white;
-    font-size: 30px;
+    font-size: 23px;
     text-align: center;
-    width: 50%;
+    width: 55%;
+    z-index: 2;
+    gap: 10px;
+}
+
+.subtitulo{
+    font-style: italic;
+    font-weight: 300
 }
 
 
@@ -43,17 +87,18 @@ h1{
 .solucaoHead{
     display: flex;
     flex-direction: column;
+    gap: 5px;
     justify-content: center;
     align-items: center;
+    height: 20vh;
     width: 100vw;
     max-width: 100%;
 
 }
 
 .solucaoHead p{
-    margin: 0 10% 0 10%;
-    font-weight: 100;
-    color: #817777;
+    width: 50%;
+    font-weight: 300;
 }
 
 
@@ -67,9 +112,7 @@ h1{
 .solucaoText h2{
     color: #000;
     font-size: 50px;
-    border-bottom: 3px solid #56408C;
-    margin-bottom: 2%;
-    padding-bottom: 0.5%;
+    font-family: "Poppins", serif;
 }
 
 
@@ -84,7 +127,7 @@ h1{
     justify-content: center; 
     gap: 2rem; 
     flex-wrap: nowrap;
-    max-width: 90vw;
+    max-width: 85vw;
     width: 100vw;
     margin: auto;
     align-items: stretch;
@@ -97,28 +140,31 @@ h1{
     flex-direction: column;
     flex: 1 1 300px; 
     max-width: 700px;
-    padding: 2% 5% 2% 5%;
-    border-radius: 10px;
-    border: 1px solid rgba(179, 174, 174, 0.642);
+    padding: 4% 5% 2% 5%;
+    border-radius: 5px;
     border-bottom: 5px solid #56408C;
-    width: 700px;
+    width: 100px;
+    height: 55vh;
     text-align: center;
-    box-shadow: 2px 1px 41px -5px rgba(176, 174, 174, 0.75);
+    box-shadow: 2px 1px 15px -5px rgba(176, 174, 174, 0.75);
     transition: 0.2s;
 }
 
 .card h3{
     margin-bottom: 5%;
-    font-size: 30px;
+    font-size: 20px;
+    font-family: "Poppins",serif
 }
 
 .card p{
-    font-weight: 100;
-    color: #817777;
+    font-weight: 300;
+    color: #000;
+    font-size: 17px;
+    width: 300px;
 }
 
 .card img{
-    width: 50%;
+    width: 100px;
     height: 100px;
     border-radius: 10px;
     align-self: center;
@@ -129,4 +175,39 @@ h1{
     scale: 1.1;
     cursor: pointer;
     transition: 0.2s;
+}
+
+.containerSobre{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 30px;
+    background-color: #F9F9F9;
+    height: 100vh;
+    width: 100vw;
+}
+
+.containerSobre h2{
+    color: #000;
+    font-size: 50px;
+    font-family: "Poppins", serif;
+}
+
+.containerSobre img{
+    width:500px;
+    height: 40%;
+    box-shadow: -80px 40px #3A2E5D;  
+    border-radius: 10px;
+    
+}
+
+.elementsSobre{
+    margin-left: 10vw;
+}
+
+.sobreText{
+    text-align: start;
+    display: flex;
+    justify-content: start;
+    align-items: start;
 }
