--- a/view/new_home.html
+++ b/view/new_home.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Konkhmer+Sleokchher&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 <body>
@@ -27,14 +28,15 @@
                 <button>Login</button>
                 <button>Cadastro</button>
              </div>
-            </div>
+        </div>
     <div class="mainContainer">
 
 
         <div class="containerHome">
             <div class="mainText">
-                <h1>LatencySlayer</h1>
-                <p>Somos uma empresa criada para garantir máximo desempenho em servidores de games. Monitoramos, detectamos e permitimos que  a latência seja eliminada antes que ela afete a jogabilidade.</p>
+                <h1>LatencySlayers</h1>
+                <hr class="purpleLine">
+                <p class="subtitulo">Somos uma empresa criada para garantir máximo desempenho em servidores de games. Monitoramos, detectamos e permitimos que  a latência seja eliminada antes que ela afete a jogabilidade.</p>
             </div>
         </div>
 
@@ -42,30 +44,49 @@
             <div class="solucaoText">
                 <div class="solucaoHead">
                     <h2>Nossa solução</h2>
-                    <p>Com expertise em monitoramento de servidores de games, a <b>LatencySlayer</b> monitora servidores de games, detectando sobrecargas e oferecendo um melhor monitoramento de desempenho.</p>
+                    <hr class="purpleLine">
+
+                    <p>Com expertise em monitoramento de servidores de games, a <b class="purple">LatencySlayer</b> monitora servidores de games, detectando sobrecargas e oferecendo um melhor monitoramento de desempenho.</p>
                 </div>
                 
                 <div class="cardsSolucao">
                     <div class="card">
-                        <img src="./img/imagemLupa.png" alt="Imagem de uma lupa">
-                        <h3>Monitoramento inteligente de recursos</h3>
-                        <p>Monitore em tempo real o desempenho dos seus servidores e enviamos alertas automáticos para evitar falhas e gargalos.</p>
+                        <div id="cardContent">
+                            <img src="./img/imagemLupa.png" alt="Imagem de uma lupa">
+                            <h3>Monitoramento inteligente de recursos</h3>
+                            <p>Monitore em tempo real o desempenho dos seus servidores e enviamos alertas automáticos para evitar falhas e gargalos.</p>
+                        </div>
                     </div>
                     <div class="card">
-                        <img src="./img/imagemForm.png" alt="">
-                        <h3>Gestão de logs e analises avançadas</h3>
-                        <p>Gerenciamos logs com análise avançada, garantindo armazenamento seguro e consultas detalhadas para auditoria e diagnóstico preciso.</p>
+                        <div id="cardContent">
+                            <img src="./img/imagemForm.png" alt="">
+                            <h3>Gestão de logs e analises avançadas</h3>
+                            <p>Gerenciamos logs com análise avançada, garantindo armazenamento seguro e consultas detalhadas para auditoria e diagnóstico preciso.</p>
+                        </div>
                     </div>
                     <div class="card">
-                        <img src="./img/imagemDash.png" alt="">
-                        <h3>Dashboard interativa e personalizavel</h3>
-                        <p>Oferecemos uma dashboard interativa e personalizável,  permitem monitorar seus servidores em tempo real e configurar métricas conforme suas necessidades.</p>
+                        <div id="cardContent">
+                            <img src="./img/imagemDash.png" alt="">
+                            <h3>Dashboard interativa e personalizavel</h3>
+                            <p>Oferecemos uma dashboard interativa e personalizável,  permitem monitorar seus servidores em tempo real e configurar métricas conforme suas necessidades.</p>
+                        </div>
                     </div>
-
                 </div>
             </div>
 
         </div>
+
+        <div class="containerSobre">
+            <div class="elementsSobre"></div>
+                <div class="divImg">
+                    <img src="img/sobreImg.png" alt="">
+                </div>
+                <div class="sobreText">
+                    <h3>Sobre nós</h3>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
