--- a/view/home.html
+++ b/view/home.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Konkhmer+Sleokchher&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -45,7 +46,6 @@
                 <div class="solucaoHead">
                     <h2>Nossa solução</h2>
                     <hr class="purpleLine">
-
                     <p>Com expertise em monitoramento de servidores de games, a <b class="purple">LatencySlayer</b> monitora servidores de games, detectando sobrecargas e oferecendo um melhor monitoramento de desempenho.</p>
                 </div>
                 
@@ -93,6 +93,23 @@
                     <button class="btnPurple">Entre em contato</button>
                 </div>
             </div>
+        </div>
+
+        <div class="containerContato">
+                <div class="ContatoText">
+                    <h2>Fale conosco</h2>
+                    <p>Entre em contato com a nossa equipe através do nosso email de suporte caso tenha alguma dúvida, crítica ou sugestão.</p>
+                    
+                    <button class="btnPurple">
+                        E-mail 
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" style="fill: rgb(255, 255, 255);"><path d="M20 4H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm0 2v.511l-8 6.223-8-6.222V6h16zM4 18V9.044l7.386 5.745a.994.994 0 0 0 1.228 0L20 9.044 20.002 18H4z"></path></svg>
+                    </button>
+
+                </div>
+
+                <div class="contacts">
+                    bbb
+                </div>
         </div>
 
     </div>
