--- a/view/style/home.css
+++ b/view/style/home.css
@@ -16,6 +16,7 @@ body{
 .purpleLine{
     display: flex;
     justify-content: center;
+    color:#56408C;
     background-color:#56408C;
     border: none;
     width: 100px;
@@ -84,19 +85,26 @@ h1{
     flex-direction: column;
 }
 
+.containerSolucao .purpleLine{
+    border: solid #56408C;
+    background-color: #56408C;
+    color: #56408C;
+}
+
 .solucaoHead{
     display: flex;
     flex-direction: column;
     gap: 5px;
     justify-content: center;
     align-items: center;
-    height: 20vh;
+    height: 25vh;
     width: 100vw;
-    max-width: 100%;
+    
 
 }
 
 .solucaoHead p{
+    margin-top: 5px;
     width: 50%;
     font-weight: 300;
 }
@@ -104,7 +112,7 @@ h1{
 
 
 .solucaoText{
-    margin-top: 10%;
+    margin-top: 7%;
     width: 100%;
     text-align: center;
 }
@@ -113,6 +121,7 @@ h1{
     color: #000;
     font-size: 50px;
     font-family: "Poppins", serif;
+
 }
 
 
@@ -231,4 +240,53 @@ h1{
     height: 5vh;
     border: none;
     border-radius: 10px;
+    transition: 0.3s;
+
 }
+
+.btnPurple:hover{
+    cursor: pointer;
+    background-color: #7560a4;
+    transform: scale(1.1);
+    transition: 0.3s;
+}
+
+.containerContato{
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    gap: 30vw;
+
+}
+
+.ContatoText{
+    display: flex;
+    flex-direction: column;
+    width: 33vw;
+    margin-left: 10vw;
+    gap: 20px;
+}
+
+.ContatoText h2{
+    font-size: 40px;
+    font-family: "Poppins",serif;
+}
+
+.ContatoText p{
+    font-size: 25px;
+    text-align: justify;
+    /* font-weight: 300; */
+    color: #000;
+}
+
+.ContatoText .btnPurple{
+    display: flex;
+    align-self: flex-start;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    height: 6vh;
+    gap: 30px;
+}
+
