--- a/view/home.html
+++ b/view/home.html
@@ -16,24 +16,25 @@
 </head>
 <body>
         <!-- Header -->
-        <div class="navBar">
+        <div id="navBar">
             <img src="./img/latencySlayers-removebg-preview 2.png" alt="" class="logo">
             <!-- Home, sobre nós, serviços -->
             <div class="containerBotoes">
-                <a href="">Home</a>
-                <a href="">Sobre nós</a>
-                <a href="">Serviços</a>
+                <a href="#secaoHome">Home</a>
+                <a href="#secaoSolucao">Serviços</a>
+                <a href="#secaoSobre">Sobre nós</a>
+                <a href="#secaoContato">Contato</a>
             </div>
             <!-- Login e cadastro -->
              <div class="botoesHeader">
-                <button>Login</button>
-                <button>Cadastro</button>
+                <button onclick="window.location='cadastro.html'">Login</button>
+                <button onclick="window.location='cadastro.html'">Cadastro</button>
              </div>
         </div>
     <div class="mainContainer">
 
-
-        <div class="containerHome">
+        <!-- SEÇÃO HOME -->
+        <div id="secaoHome" class="containerHome">
             <div class="mainText">
                 <h1>LatencySlayers</h1>
                 <hr class="purpleLine">
@@ -41,7 +42,8 @@
             </div>
         </div>
 
-        <div class="containerSolucao">
+        <!-- SEÇÃO SOLUÇÃO -->
+        <div id="secaoSolucao" class="containerSolucao">
             <div class="solucaoText">
                 <div class="solucaoHead">
                     <h2>Nossa solução</h2>
@@ -76,7 +78,8 @@
 
         </div>
 
-        <div class="containerSobre">
+        <!-- SEÇÃO SOBRE -->
+        <div id="secaoSobre"class="containerSobre">
             <div class="elementsSobre">
                 <div class="divImg">
                     <img src="img/sobreImg.png" alt="">
@@ -90,12 +93,13 @@
 
                         Quisque id aliquam elit. Suspendisse congue pharetra maximus. Duis rutrum velit a leo euismod dictum. Sed sodales est efficitur arcu tincidunt tincidunt. Curabitur fringilla, risus at feugiat feugiat, nisl nulla tincidunt tellus, elementum elementum lorem nisl eleifend dolor. Nullam eget dui at sem ullamcorper luctus.
                     </p>
-                    <button class="btnPurple">Entre em contato</button>
+                    <a href="#secaoContato"><button class="btnPurple">Entre em contato</button></a>
                 </div>
             </div>
         </div>
 
-        <div class="containerContato">
+        <!-- SEÇÃO CONTATO -->
+        <div id="secaoContato" class="containerContato">
                 <div class="ContatoText">
                     <h2>Fale conosco</h2>
                     <p>Entre em contato com a nossa equipe através do nosso email de suporte caso tenha alguma dúvida, crítica ou sugestão.</p>
@@ -107,16 +111,49 @@
 
                 </div>
 
-                <div class="contacts">
-                    bbb
+                <div class="contatos">
+                    
+                    <div class="contato">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" style="fill:#767676;"><path d="M20 4H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm0 2v.511l-8 6.223-8-6.222V6h16zM4 18V9.044l7.386 5.745a.994.994 0 0 0 1.228 0L20 9.044 20.002 18H4z"></path></svg>
+                        <p class="adress">Rua Haddock Lobo, 595</p>
+                    </div>
+
+                    <div class="contato">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" style="fill:#767676;"><path d="M12 2C7.589 2 4 5.589 4 9.995 3.971 16.44 11.696 21.784 12 22c0 0 8.029-5.56 8-12 0-4.411-3.589-8-8-8zm0 12c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4z"></path></svg>
+                        <p class="adress">suporte@latencyslayers.com</p>
+                    </div>
+
                 </div>
+                
+        </div>
+        <div class="footer">
+            <div class="txtFooter">
+                <span class="titleFooter">Latency<b class="purple">Slayers</b></span>
+                <p>©2025 LatencySlayers.</p>
+                <p>Todos os direitos reservados.</p>
+            </div>
+
+            <div class="logos">
+                <svg class="logoContato" xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24" style="fill: white;"><path d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096 1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387 2.704 0 3.203 1.778 3.203 4.092v4.71z"></path></svg>
+                <svg class="logoContato" xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 24 24" style="fill: white;"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z"></path></svg>
+            </div>
+            
         </div>
 
+       
+
     </div>
-
-
-
-
-
 </body>
 </html>
+
+<script>
+    window.addEventListener("scroll", function () {
+        let navbar = document.getElementById("navBar");
+        if (window.scrollY > 50) {
+            navbar.classList.add("scrolled");
+        } else {
+            navbar.classList.remove("scrolled");
+        }
+    });
+
+</script>
