--- a/view/dashs/gestor.html
+++ b/view/dashs/gestor.html
@@ -15,6 +15,12 @@
               </svg> 
             <p class="nome-usuario">Nelson Roliser</p>
             <p class="">nelsinho.gestor@EAsports.com</p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <div class="opcoes">
 
                 <button onclick="dashs" class="botaop"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-graph-up" viewBox="0 0 16 16">
@@ -26,13 +32,14 @@
                       </svg> mensagens</button>
 
             </div>
+            
 
             <button class="botao-sair">Sair</button>
 
         </div>
     </div>
     <div class="div-central">
-        <p>Div Central</p>
+        <h1>Gestão de dados</h1>
     </div>
     <div class="div-direita">
         <p>Div Direita</p>
