--- a/view/dashs/analitico.html
+++ b/view/dashs/analitico.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dashboard Analítica</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -14,6 +14,8 @@
 <body>
 
     <div class="mainPage">
+
+        <!-- NAVBAR LATERAL  -->
         <div class="navbarEsq">
             <div class="profile">
                 <svg xmlns="http://www.w3.org/2000/svg" width="150" height="150" viewBox="0 0 24 24" style="fill: white;"><path d="M12 2C6.579 2 2 6.579 2 12s4.579 10 10 10 10-4.579 10-10S17.421 2 12 2zm0 5c1.727 0 3 1.272 3 3s-1.273 3-3 3c-1.726 0-3-1.272-3-3s1.274-3 3-3zm-5.106 9.772c.897-1.32 2.393-2.2 4.106-2.2h2c1.714 0 3.209.88 4.106 2.2C15.828 18.14 14.015 19 12 19s-3.828-.86-5.106-2.228z"></path></svg>
@@ -29,8 +31,55 @@
             <button class="logout">Sair</button>
         </div>
 
+        <!-- CONTAINER PAGINA -->
         <div class="containerDir">
-            bb
+            
+            <!-- HEAD -->
+            <div class="header">
+                <span class="titulo"> HISTÓRICO | VISÃO GERAL</span>
+
+                <div class="cjtInput">
+                    <div class="inputPesq">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:black;"><path d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"></path><path d="M11.412 8.586c.379.38.588.882.588 1.414h2a3.977 3.977 0 0 0-1.174-2.828c-1.514-1.512-4.139-1.512-5.652 0l1.412 1.416c.76-.758 2.07-.756 2.826-.002z"></path></svg><input type="text" class="inputsDados" id="ipt_codMaq" placeholder="Informe o código da máquina">
+                    </div>
+                    <button class="btnHead">Visualizar</button>
+                </div>
+            </div>
+
+            <!-- KPI's SUPERIOR -->
+             <div class="kpis">
+
+                <div class="kpisSuperior">
+                    <div class="kpi">
+                        <span class="kpiTitle"> SERVIDOR COM MAIS <b>ALERTAS</b> </span>
+                        <p class="kpiData" id="servMaisAlerta">SV003</p>
+                    </div>
+
+                    <div class="kpi">
+                        <span class="kpiTitle"> SERVIDOR COM MENOS <b>ALERTAS</b> </span>
+                        <p class="kpiData" id="servMenosAlerta">SV001</p>
+                    </div>
+
+                    <div class="kpi">
+                        <span class="kpiTitle"> SERVIDOR COM MAIOR <b>LATÊNCIA</b> MÉDIA </span>
+                        <p class="kpiData" id="servMaiorLatencia">SV001</p>
+                    </div>
+                </div>
+
+                <div class="kpisInferior">
+                    <div class="kpi">
+                        <span class="kpiTitle"> SERVIDOR COM MAIOR <b>CPU</b> MÉDIA </span>
+                        <p class="kpiData" id="servMaiorCpu">SV003</p>
+                    </div>
+
+                    <div class="kpi">
+                        <span class="kpiTitle"> SERVIDOR COM MAIOR <b>RAM</b> MÉDIA </span>
+                        <p class="kpiData" id="servMaiorRam">SV002</p>
+                    </div>
+                </div>
+
+             </div>
+
         </div>
     </div>
 
