--- a/view/dashs.style/analitico.css
+++ b/view/dashs.style/analitico.css
@@ -65,6 +65,7 @@
     all: unset;
     display: flex;
     gap: 10px;
+    width: 15vw;
     font-family: "Konkhmer Sleokchher", serif;
     justify-content: center;
     border-radius: 5px;
@@ -193,7 +194,9 @@
     font-size: 15px;
     font-weight: 500;
     box-shadow: -10px 10px #b0b0b07f;  
+    text-align: center;
 }
+
 
 .kpiData{
     font-size: 40px;
@@ -207,3 +210,44 @@
     display: flex;
     gap: 5vw;
 }
+
+
+.graficos{
+    display: flex;
+    gap: 4vw;
+    height: 40vh;
+}
+
+.graficoIdv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 3vh;
+    height: 40vh;
+    font-size: 20px;
+}
+
+
+.graficoIdv .titulo{
+    font-size: 15px;
+    font-weight: 500;
+    background-color: rgb(255, 255, 255);
+    width: 35vw;
+    height: 5vh;
+    text-align: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    
+}
+
+.chartIdv{
+    width: 35vw;
+    height: 20vh;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+
