--- a/view/dashs/analiticoGeral.html
+++ b/view/dashs/analiticoGeral.html
@@ -9,6 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Konkhmer+Sleokchher&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../dashs.style/analitico.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -39,10 +40,10 @@
                 <span class="titulo"> HISTÓRICO | VISÃO GERAL</span>
 
                 <div class="cjtInput">
-                    <div class="inputPesq">
+                    <div class="inputPesq" id="iptMaquina">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:black;"><path d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"></path><path d="M11.412 8.586c.379.38.588.882.588 1.414h2a3.977 3.977 0 0 0-1.174-2.828c-1.514-1.512-4.139-1.512-5.652 0l1.412 1.416c.76-.758 2.07-.756 2.826-.002z"></path></svg><input type="text" class="inputsDados" id="ipt_codMaq" placeholder="Informe o código da máquina">
                     </div>
-                    <button class="btnHead">Visualizar</button>
+                    <button class="btnHead" onclick="pesquisar()">Visualizar</button>
                 </div>
             </div>
 
@@ -80,8 +81,150 @@
 
              </div>
 
+             <div class="graficos">
+                
+                <div class="graficoIdv">
+                    <span class="titulo">Número de alertas dos servidores no ultimo ano (%)</span>
+                    <canvas id="myChart" class="chartIdv"></canvas>
+                </div>
+                 
+                <div class="graficoIdv">
+                    <p class="titulo">Componentes mais utilizados dentre os servidores (%)</p>
+                    <canvas id="myChart2" class="chartIdv"></canvas>
+                </div>
+             </div>
         </div>
     </div>
 
 </body>
 </html>
+
+<script>
+    const ctx = document.getElementById('myChart');
+
+    const meses = ["Jan", "Fev", "Mar", "Abr", "Mai", "Jun", "Jul", "Ago", "Set", "Out", "Nov", "Dez"];
+
+        const data = {
+            labels: meses,
+            datasets: [
+                {
+                    label: "SV001",
+                    data: [12, 15, 10, 9, 22, 18, 17, 20, 19, 21, 16, 14], // Valores fixos para o servidor 1
+                    borderColor: "#44395F",
+                    backgroundColor: "#44395F",
+                    borderWidth: 2,
+                    fill: false
+                },
+                {
+                    label: "SV002",
+                    data: [30, 40, 50, 33, 25, 66, 66, 33, 54, 45, 45, 66], // Valores fixos para o servidor 2
+                    borderColor: "#A396C3",
+                    backgroundColor: "#A396C3",
+                    borderWidth: 2,
+                    fill: false
+                },
+                {
+                    label: "SV003",
+                    data: [80, 90, 66, 84, 86, 74, 69, 93, 99, 77, 69, 81], // Valores fixos para o servidor 3
+                    borderColor: "#EB99E5",
+                    backgroundColor: "#EB99E5",
+                    borderWidth: 2,
+                    fill: false
+                }
+            ]
+        };
+
+        const config = {
+            type: "line",
+            data: data,
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                plugins: {
+                    legend: {
+                    position: 'bottom',
+                labels: {
+                    font: {
+                        size: 12
+                    }
+                }
+                }
+                },
+                
+                scales: {
+                    y: {
+                        beginAtZero: true,
+                    },
+                    x: {
+                    title: {
+                        display: false,
+                        text: "Meses do Ano"
+                    }
+                    }
+                }
+            }
+        };
+
+    new Chart(ctx, config);
+
+
+    const ctx2 = document.getElementById('myChart2');
+
+    const componentes = [""];
+
+        const data2 = {
+            labels: componentes,
+            datasets: [
+                {
+                    label: "CPU",
+                    data: [12], // Valores fixos para o servidor 1
+                    backgroundColor: "#44395F",
+                },
+                {
+                    label: "RAM",
+                    data: [30], // Valores fixos para o servidor 2
+                    backgroundColor: "#A396C3",
+                },
+                {
+                    label: "Rede",
+                    data: [80], // Valores fixos para o servidor 3
+                    backgroundColor: "#EB99E5",
+                }
+            ]
+        };
+
+        const config2 = {
+            type: "bar",
+            data: data2,
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                plugins: {
+                    legend: {
+                    position: 'bottom',
+                labels: {
+                    font: {
+                        size: 12
+                    }
+                }
+                }
+                },
+                scales: {
+                    y: {
+                        beginAtZero: true,
+                    }
+                }
+            }
+        };
+
+    new Chart(ctx2, config2);
+
+    function pesquisar(){
+        let maquina = iptMaquina.value
+
+        if(maquina = 'SV003'){
+            window.location.href='analiticoIndiv.html'
+        }
+    }
+
+</script>
