--- a/view/dashs.style/gestor.css
+++ b/view/dashs.style/gestor.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     padding: 0;
@@ -8,102 +7,271 @@ body {
 }
 
 .div-esquerda {
-    width: 18%; 
-    background-color: #44395F; 
-    color: white;
     display: flex;
-    justify-content: flex-start;
+    flex-direction: column;
+    width: 20vw;
+    height: 100vh;
+    gap: 4vh;
+    background-color: #44395F;
+    color: #EFEFEF;
     align-items: center;
-    border-top-right-radius: 2rem; 
-    border-bottom-right-radius: 2rem;
-    flex-direction: column; 
-    padding: 1.25rem;
+    border-top-right-radius: 1rem; 
+    border-bottom-right-radius: 1rem;
 }
 
-.info-usuario {
-    text-align: center; 
-    margin-bottom: 1.25rem; 
-}
-
-.foto-usuario {
-    width: 5rem; 
-    height: 5rem; 
-    border-radius: 50%; 
-    margin-bottom: 0.625rem; 
-}
-
-.nome-usuario {
-    font-size: 1rem; 
-    font-weight: bold; 
-    color: white; 
-}
-
-.botaop {
-    background-color: transparent; 
-    border: 0.125rem  #7b5dc8; 
-    color: #ffffff; 
-    padding: 0.625rem 0.625rem; 
-    margin-bottom: 0.313rem;
-    font-size: 1rem; 
-    font-weight: bold; 
-    border-radius: 1.875rem; 
-    display: flex; 
-    align-items: center; 
-    margin: auto;
-    cursor: pointer; 
-    transition: background-color 0.3s , color 0.3s;
-}
-
-.botaop svg {
-    margin-right: 0.5rem; 
-    width: 1.25rem; 
-    height: 1.25rem; 
-    fill: currentColor; 
-}
-
-.botaop:hover {
-    background-color: rgba(0, 123, 255, 0.1); 
-    color: #7b5dc8; 
-    
-}
-
-.botao-sair {
-    margin-top: 10%; 
-    background-color: #dcdcdc; 
-    color: rgb(0, 0, 0); 
-    border: none; 
-    padding: 0.625rem 1.25rem; 
-    font-size: 1rem; 
-    border-radius: 1.688rem;
-    cursor: pointer;
+.profile {
+    margin-top: 4vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     text-align: center;
-    width: 100%; 
+    font-size: 1.25rem;
+    gap: 0.625rem;
 }
 
-.botao-sair:hover {
-    background-color: rgb(132, 132, 132);
+.profile .titulo2 {
+    font-weight: bolder;
+    font-size: 1.5625rem;
 }
 
+.profile #email {
+    font-size: 1.25rem;
+    font-weight: 300;
+    text-align: center;
+}
+
+.btnsNav {
+    margin-top: 3vh;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+}
+
+.buttonNav {
+    all: unset;
+    display: flex;
+    gap: 0.625rem;
+    font-family: "Konkhmer Sleokchher", serif;
+    justify-content: center;
+    border-radius: 0.3125rem;
+    transition: 0.3s;
+}
+
+.buttonNav:hover {
+    cursor: pointer;
+    background-color: rgb(105, 85, 157);
+    transform: scale(1.05);
+    transition: 0.3s;
+}
+
+.logout {
+    all: unset;
+    display: flex;
+    margin-top: 20vh;
+    background-color: #817E88;
+    width: 10vw;
+    height: 4vh;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.3125rem;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.logout:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+    background-color: #816fa7;
+    transition: 0.3s;
+}
 
 .div-central, .div-direita {
-    flex: 1; 
+    flex: 1;
     display: flex;
+}
 
+.div-central h1 {
+    font-family: "Poppins", serif;
+    color: #44395F;
+    align-items: flex-start;
+    text-align: left;
 }
 
 .div-central {
-    background-color: #EFEFEF; 
+    background-color: #EFEFEF;
+    display: flex;
     justify-content: start;
-    align-items: row;
-    margin-left: 0.938rem;
-    margin-top:0.031rem ;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 0.05875rem;
+    margin-top: 0.000625rem;
+    text-align: center;
 }
-.div-central h1 {
 
-    color:#44395F; 
-    text-decoration:underline;
+.div-central .titulo {
+    padding-right: 50%;
+    font-family: "Poppins", serif;
+    font-size: 0.625rem;
+}
+
+.titulo2 {
+    font-family: "Poppins", serif;
+}
+
+.selecao {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.selecao h2 {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: #44395F;
+    font-size: 2.2rem;
+    font-weight: 900;
+    margin-top: 1.25rem;
+}
+
+.selecao select {
+    color: #44395F;
+    font-size: 2rem;
+    font-weight: 700;
+    background-color: transparent;
+    border: 0.0625rem solid #44395F;
+    padding: 0.3125rem 0.625rem;
+    border-radius: 0.3125rem;
+    cursor: pointer;
+}
+
+.kpi-qtd-alertas {
+    display: flex;
+    flex-direction: column;
+    gap: 0.625rem;
+    align-items: center;
+    background-color: #F9F9F9;
+    border-radius: 0.625rem;
+    width: 20vw;
+    height: 15vh;
+    font-size: 0.9375rem;
+    font-weight: 500;
+    box-shadow: -0.625rem 0.625rem #b0b0b07f;
+    padding: 0.3125rem 0.3125rem 0.625rem;
+}
+
+.kpi-qtd-alertas h3 {
+    color: #44395F;
+    margin-bottom: 0.3125rem;
+}
+
+.kpi-qtd-alertas .alertas-quantidade {
+    display: flex;
+    gap: 0.625rem;
+}
+
+.kpi-qtd-alertas p {
+    color: #333;
+    font-size: 2rem;
+    margin: 0;
+}
+
+.kpi-aviso {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgb(225, 0, 255);
+    color: black;
+    padding: 0 0.125rem 0.625rem;
+    width: 30%;
+    height: 10%;
+    text-align: center;
+    border-radius: 1.25rem;
+    margin-top: 1.25rem;
+}
+
+.kpi-aviso p {
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+.grafico {
+    margin-top: 1.875rem;
+    margin-bottom: 1.875rem;
+    max-width: 37.5rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 0.625rem;
+    align-items: center;
+    background-color: #F9F9F9;
+    border-radius: 0.625rem;
+    width: 70%;
+    height: 80%;
+    box-shadow: -0.625rem 0.625rem #b0b0b07f;
+    padding: 0.3125rem 0.3125rem 0.625rem;
 }
 
 .div-direita {
-    background-color: #EFEFEF; 
+    background-color: #EFEFEF;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 0.00195rem;
+    text-align: center;
 }
+
+.selecao2 {
+    margin-top: 3.5625rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.selecao2 h2 {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: #44395F;
+    font-size: 2.2rem;
+    font-weight: 900;
+    margin-top: 1.25rem;
+}
+
+.selecao2 select {
+    color: #44395F;
+    font-size: 2rem;
+    font-weight: 700;
+    background-color: transparent;
+    border: 0.0625rem solid #44395F;
+    padding: 0.3125rem 0.3125rem;
+    border-radius: 0.3125rem;
+    cursor: pointer;
+}
+
+.grafico-podio {
+    margin-top: 1.875rem;
+    margin-bottom: 1.875rem;
+    width: 80%;
+    max-width: 37.5rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 0.625rem;
+    align-items: center;
+    background-color: #F9F9F9;
+    border-radius: 0.625rem;
+    width: 70%;
+    height: 80%;
+    box-shadow: -0.625rem 0.625rem #b0b0b07f;
+    padding: 0.3125rem 0.3125rem 0.625rem;
+    
+}
+
