--- a/web-data-viz/public/style/cadastroMaquina.css
+++ b/web-data-viz/public/style/cadastroMaquina.css
@@ -61,7 +61,7 @@ hr {
     box-shadow: 30px 30px 30px rgba(0, 0, 0, .2);
     border: 2px solid #4B0082;
     width: 450px;
-    height: 350px;
+    height: 380px;
     visibility: hidden;
 }
 
@@ -91,57 +91,7 @@ hr {
     justify-content: center;
     align-items: center;
 }
-
-.btn {
-    position: relative;
-    font-size: 17px;
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1em 2.5em;
-    display: inline-block;
-    cursor: pointer;
-    border-radius: 6em;
-    transition: all 0.2s;
-    border: none;
-    font-family: inherit;
-    font-weight: 500;
-    color: white;
-    background-color: #56408c;
-  }
   
-  .btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  }
-  
-  .btn:active {
-    transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  }
-  
-  .btn::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s;
-  }
-  
-  .btn::after {
-    background-color: #56408c;
-  }
-  
-  .btn:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-  }
-  
-
 .quadroMaquinas {
     width: 95%;
     height: 70%;
@@ -151,6 +101,7 @@ hr {
 }
 
 .maquinas {
+    align-items: center;
     width: 100%;
     height: 100%;
     border: 2px solid black;
@@ -174,4 +125,44 @@ table, th, td {
     justify-content: space-around;
 }
 
+
+.telaDados {
+    position: absolute;
+    gap: 10px;
+    font-size: larger;
+    font-weight: bolder;
+    margin-left: 500px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: black;
+    background-color: #FFFAFA;
+    box-shadow: 30px 30px 30px rgba(0, 0, 0, .2);
+    border: 2px solid #4B0082;
+    width: 450px;
+    height: 350px;
+    visibility: hidden;  
+}
+
+.telaDados.ativadoDados {
+    visibility: visible;
+}
+
+button {
+    border: none;
+    outline: none;
+    background-color: #6c5ce7;
+    padding: 10px 20px;
+    font-size: 12px;
+    font-weight: 700;
+    color: #fff;
+    border-radius: 5px;
+    transition: all ease 0.1s;
+    box-shadow: 0px 5px 0px 0px #a29bfe;
+  }
+  
+  button:active {
+    transform: translateY(5px);
+    box-shadow: 0px 0px 0px 0px #a29bfe;
+  }
 
