Tela cadastro maquina quase pronto, tela usuarios quase pronta, adiciona responsividade cadastro

--- a/web-data-viz/public/style/cadastro.css
+++ b/web-data-viz/public/style/cadastro.css
@@ -18,7 +18,7 @@ body {
 .container { 
     position: relative;
     width: 850px;
-    height: 550px;
+    height: 580px;
     background: #fff;
     border-radius: 30px;
     box-shadow: 0 0 30px rgba(0, 0, 0, .2);
@@ -68,7 +68,7 @@ form {
 
 .input input {
     width: 100%;
-    padding: 13px 50px 13px 20px;
+    padding: 13px 50px 8px 8px;
     background: #eee;
     border-radius: 8px;
     border: none;
@@ -188,4 +188,67 @@ form {
     background: transparent;
     border: 2px solid #fff;
     box-shadow: none;
+}
+
+@media screen and (max-width: 650px) {
+    .container {
+        height: calc(100vh - 40px);
+    }
+
+    .formulario {
+        bottom: 0;
+        width: 100%;
+        height: 70%;
+    }
+
+    .container.ativado .formulario {
+        right: 0;
+        bottom: 30%;
+    }
+
+    .alternar_formulario::before {
+        left: 0;
+        top: -270%;
+        width: 100%;
+        height: 300%;
+        border-radius: 20vw;
+    }
+
+    .container.ativado .alternar_formulario::before {
+        top:70%;
+        left: 0;
+    }
+
+    .alternar_informacao {
+        width: 100%;
+        height: 30%;
+    }
+
+    .alternar_informacao.alternar_esquerda {
+        top: 0;
+    }
+
+    .container.ativado .alternar_informacao.alternar_esquerda {
+        left: 0;
+        top: -30%;
+    }
+
+    .alternar_informacao.alternar_direita {
+        right: 0;
+        bottom: -30%;
+    }
+
+    .container.ativado .alternar_informacao.alternar_direita {
+        bottom: 0;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .formulario {
+        padding: 20px;
+    }
+
+    .alternar_informacao h1 {
+        font-size: 30px;
+    }
 }
