--- a/view/style/cadastro.css
+++ b/view/style/cadastro.css
@@ -22,6 +22,7 @@ body {
     background: #fff;
     border-radius: 30px;
     box-shadow: 0 0 30px rgba(0, 0, 0, .2);
+    margin: 20px;
     overflow: hidden;
 }
 
@@ -188,4 +189,67 @@ form {
     background: transparent;
     border: 2px solid #fff;
     box-shadow: none;
+}
+
+@media screen and (max-width: 650px) {
+    .container {
+        height: calc(100vh - 40px);
+    }
+
+    .formulario {
+        bottom: 0;
+        width: 100%;
+        height: 70%;
+    }
+
+    .container.ativado .formulario {
+        right: 0;
+        bottom: 30%;
+    }
+
+    .alternar_formulario::before {
+        left: 0;
+        top: -270%;
+        width: 100%;
+        height: 300%;
+        border-radius: 20vw;
+    }
+
+    .container.ativado .alternar_formulario::before {
+        top:70%;
+        left: 0;
+    }
+
+    .alternar_informacao {
+        width: 100%;
+        height: 30%;
+    }
+
+    .alternar_informacao.alternar_esquerda {
+        top: 0;
+    }
+
+    .container.ativado .alternar_informacao.alternar_esquerda {
+        left: 0;
+        top: -30%;
+    }
+
+    .alternar_informacao.alternar_direita {
+        right: 0;
+        bottom: -30%;
+    }
+
+    .container.ativado .alternar_informacao.alternar_direita {
+        bottom: 0;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .formulario {
+        padding: 20px;
+    }
+
+    .alternar_informacao h1 {
+        font-size: 30px;
+    }
 }
