home txt sobre nos

--- a/view/dashs.style/analitico.css
+++ b/view/dashs.style/analitico.css
@@ -12,6 +12,14 @@
     font-family: "Konkhmer Sleokchher", serif;
 }
 
+.red{
+    color: red;
+}
+
+
+.green{
+    color: green;
+}
 .mainPage{
     display: flex;
     height: 100vh;
