--- a/view/home.html
+++ b/view/home.html
@@ -115,11 +115,8 @@
                 <div class="sobreText">
                     <h3>Sobre nós</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sagittis arcu quis nisi luctus, id accumsan felis tristique. Proin quis bibendum diam. Sed consequat nisl laoreet eros ultricies pellentesque. Nullam in est porta, pellentesque massa vitae, vehicula risus. 
-
-                        In placerat, felis vitae sodales dictum, lacus quam pretium mi, ut pretium urna turpis eu dui. Vestibulum id ullamcorper nibh. Donec luctus, nunc finibus elementum suscipit, tortor augue vulputate sapien, vitae feugiat enim augue sed. 
-
-                        Quisque id aliquam elit. Suspendisse congue pharetra maximus. Duis rutrum velit a leo euismod dictum. Sed sodales est efficitur arcu tincidunt tincidunt. Curabitur fringilla, risus at feugiat feugiat, nisl nulla tincidunt tellus, elementum elementum lorem nisl eleifend dolor. Nullam eget dui at sem ullamcorper luctus.
+                        A LatencySlayer é especialista em monitoramento e otimização de servidores de games, assegurando a estabilidade. Nossa tecnologia avançada permite acompanhar o uso de CPU, RAM e armazenamento em tempo real, além de emitir alertas automáticos antes de falhas. Gerenciamos logs com análises detalhadas para auditoria e diagnóstico preciso, proporcionando insights valiosos. Com uma dashboard interativa e personalizável, oferecemos controle total sobre a infraestrutura, permitindo ajustes conforme suas necessidades.
+                        Nosso compromisso é garantir servidores sempre prontos para a próxima partida, sem lag e sem interrupções.
                     </p>
                     <a href="#secaoContato"><button class="btnPurple">Entre em contato</button></a>
                 </div>
