--- a/view/dashs/analiticoIndiv.html
+++ b/view/dashs/analiticoIndiv.html
@@ -27,10 +27,10 @@
             <div class="btnsNav">
                 <button class="buttonNav" onclick="window.location.href='analiticoGeral.html'"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:white"><path d="M3 5v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2H5c-1.103 0-2 .897-2 2zm16.001 14H5V5h14l.001 14z"></path><path d="M11 7h2v10h-2zm4 3h2v7h-2zm-8 2h2v5H7z"></path></svg> Visão Geral </button>
                 <button class="buttonNav"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;"><path d="M10 18a7.952 7.952 0 0 0 4.897-1.688l4.396 4.396 1.414-1.414-4.396-4.396A7.952 7.952 0 0 0 18 10c0-4.411-3.589-8-8-8s-8 3.589-8 8 3.589 8 8 8zm0-14c3.309 0 6 2.691 6 6s-2.691 6-6 6-6-2.691-6-6 2.691-6 6-6z"></path><path d="M11.412 8.586c.379.38.588.882.588 1.414h2a3.977 3.977 0 0 0-1.174-2.828c-1.514-1.512-4.139-1.512-5.652 0l1.412 1.416c.76-.758 2.07-.756 2.826-.002z"></path></svg> Analisar maquina </button>
-                <button class="buttonNav"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;"><path d="M20 3H4c-1.103 0-2 .897-2 2v11c0 1.103.897 2 2 2h7v2H8v2h8v-2h-3v-2h7c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2zM4 14V5h16l.002 9H4z"></path></svg> Máquinas </button>
+                <!-- <button class="buttonNav"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: white;"><path d="M20 3H4c-1.103 0-2 .897-2 2v11c0 1.103.897 2 2 2h7v2H8v2h8v-2h-3v-2h7c1.103 0 2-.897 2-2V5c0-1.103-.897-2-2-2zM4 14V5h16l.002 9H4z"></path></svg> Máquinas </button> -->
             </div>
 
-            <button class="logout">Sair</button>
+            <button class="logout" onclick="window.location.href='../home.html'">Sair</button>
         </div>
 
         <!-- CONTAINER PAGINA -->
@@ -58,12 +58,12 @@
                     </div>
 
                     <div class="kpi">
-                        <span class="kpiTitle"> COMPONENTE MENOS REQUISITADO </span>
+                        <span class="kpiTitle"> COMPONENTE <b style="color: green;">MENOS</b> REQUISITADO </span>
                         <p class="kpiData" id="componenteMenosReq">REDE</p>
                     </div>
 
                     <div class="kpi">
-                        <span class="kpiTitle"> COMPONENTE MAIS REQUISITADO </span>
+                        <span class="kpiTitle"> COMPONENTE <b style="color: red;">MAIS</b> REQUISITADO </span>
                         <p class="kpiData" id="componenteMaisReq">CPU </p>
                     </div>
                 </div>
@@ -71,20 +71,20 @@
                 <div class="kpisInferior">
                     <div class="kpi">
                         <span class="kpiTitle"> MÉDIA DE UTILIZAÇÃO CPU (%)<br>Ultimos 30 dias: </span>
-                        <p class="kpiData" id="mediaCpu">80%</p>
-                        <span class="kpiTitle"> Paramêtro de alerta: <b>75%</b> </span>
+                        <p class="kpiData" id="mediaCpu" style="color: red;">80%</p>
+                        <span class="kpiTitle"> Paramêtro de alerta: <b style="color: red;">75%</b> </span>
                     </div>
 
                     <div class="kpi">
                         <span class="kpiTitle"> MÉDIA DE UTILIZAÇÃO RAM (%)<br>Ultimos 30 dias: </span>
                         <p class="kpiData" id="mediaRam">60%</p>
-                        <span class="kpiTitle"> Paramêtro de alerta: <b>85%</b> </span>
+                        <span class="kpiTitle"> Paramêtro de alerta: <b style="color: red;">85%</b> </span>
                     </div>
 
                     <div class="kpi">
                         <span class="kpiTitle"> MÉDIA DE UTILIZAÇÃO REDE (%)<br>Ultimos 30 dias: </span>
                         <p class="kpiData" id="mediaRede">40%</p>
-                        <span class="kpiTitle"> Paramêtro de alerta: <b>60%</b> </span>
+                        <span class="kpiTitle"> Paramêtro de alerta: <b style="color: red;">60%</b> </span>
                     </div>
                 </div>
 
@@ -122,11 +122,11 @@ new Chart(ctx, {
     data: {
         labels: ['CPU', 'RAM', 'REDE'],
         datasets: [{
-            data: [77, 66, 55],
+            data: [77, 40, 20],
             backgroundColor: [
-                '#957BD7',  
-                '#44395F',  
-                '#6730EF'   
+                '#5918FF',  
+                '#362E4A',  
+                '#EF30EF'   
             ],
         }]
     },
@@ -154,29 +154,14 @@ const ctx2 = document.getElementById('myChart2');
             labels: meses,
             datasets: [
                 {
-                    label: "sv001",
+                    label: "RAM",
                     data: [12, 15, 10, 9, 22, 18, 17, 20, 19, 21, 16, 14], // Valores fixos para o servidor 1
                     borderColor: "#44395F",
-                    backgroundColor: "#44395F",
+                    backgroundColor: "rgba(68, 57, 95, 0.7)",
                     borderWidth: 2,
-                    fill: false
+                    fill: true
                 },
-                {
-                    label: "sv002",
-                    data: [30, 40, 50, 33, 25, 66, 66, 33, 54, 45, 45, 66], // Valores fixos para o servidor 2
-                    borderColor: "#A396C3",
-                    backgroundColor: "#A396C3",
-                    borderWidth: 2,
-                    fill: false
-                },
-                {
-                    label: "sv003",
-                    data: [80, 90, 66, 84, 86, 74, 69, 93, 99, 77, 69, 81], // Valores fixos para o servidor 3
-                    borderColor: "#EB99E5",
-                    backgroundColor: "#EB99E5",
-                    borderWidth: 2,
-                    fill: false
-                }
+                
             ]
         };
 
